--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "browser-sync": "^2.26.10",
         "css-loader": "^2.1.1",
+        "file-loader": "^6.2.0",
         "sass": "^1.32.5",
         "sass-loader": "^10.1.1",
-        "style-loader": "^0.23.1"
+        "style-loader": "^0.23.1",
+        "webpack": "^5.20.0",
+        "webpack-cli": "^4.5.0"
     },
     "dependencies": {}
 }
